<resources>
    <string name="app_name">AndroidEngineerExercise</string>
    <string name="email">Email Address</string>
    <string name="password">Create Password</string>
    <string name="repeat_pass">Repeat Password</string>
    <string name="btn_create">Create an account</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys
        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
        scrambled it to make a type specimen book. It has survived not only five centuries, but also the
        leap into electronic typesetting, remaining essentially unchanged.
        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="create_acc">Create an account</string>
</resources>