<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E0202"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtRepeatPass"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="25dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlRepeatPass" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="348dp"
        android:layout_height="40dp"
        android:layout_marginBottom="22dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/lbCreatePassword"
        app:layout_constraintEnd_toEndOf="@+id/lbCreatePassword"
        app:layout_constraintStart_toEndOf="@+id/lbCreatePassword"
        app:layout_constraintTop_toBottomOf="@+id/lbEmail" />

    <TextView
        android:id="@+id/lbEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/museo_sans_500"
        android:lineSpacingExtra="1sp"
        android:text="@string/email"
        android:textColor="#FBF7F7"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintStart_toStartOf="@+id/txtEmail"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/txtCreatePass"
        android:layout_width="348dp"
        android:layout_height="40dp"
        android:layout_marginBottom="22dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="See Criteria Below"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/tlRepeatPass"
        app:layout_constraintEnd_toEndOf="@+id/lbCreatePassword"
        app:layout_constraintStart_toEndOf="@+id/lbCreatePassword"
        app:layout_constraintTop_toBottomOf="@+id/lbCreatePassword" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="54dp"
        android:text="@string/lorem"
        android:textColor="#FFFEFE"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRepeatPass" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:text="@string/create_acc"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tlRepeatPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/museo_sans_500"
        android:lineSpacingExtra="1sp"
        android:text="@string/repeat_pass"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/txtRepeatPass"
        app:layout_constraintStart_toStartOf="@+id/txtRepeatPass"
        app:layout_constraintTop_toBottomOf="@+id/txtCreatePass" />

    <TextView
        android:id="@+id/lbCreatePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginBottom="14dp"
        android:fontFamily="@font/museo_sans_500"
        android:lineSpacingExtra="1sp"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/txtCreatePass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="36dp"
        android:background="#31FE03"
        app:layout_constraintBottom_toTopOf="@+id/lbEmail"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button6"
        app:srcCompat="@drawable/gradient_button_background" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="51dp"
        android:text="@string/btn_create"
        android:textColor="#000000"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>